--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -812,11 +812,13 @@
                                             <rect key="frame" x="0.0" y="0.0" width="382" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5Ce-ww-9FB">
-                                                    <rect key="frame" x="20" y="5" width="45" height="50.5"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Ce-ww-9FB" userLabel="profileImage" customClass="CircleImageView" customModule="ajite" customModuleProvider="target">
+                                                    <rect key="frame" x="20" y="5" width="50" height="50.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nhL-oj-kLw">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nhL-oj-kLw">
                                                     <rect key="frame" x="79" y="20" width="42" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -848,20 +850,14 @@
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="3ef-HW-Qp8" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="nhL-oj-kLw" secondAttribute="trailing" constant="8" symbolic="YES" id="4do-Eh-sTh"/>
-                                                <constraint firstItem="nhL-oj-kLw" firstAttribute="leading" secondItem="5Ce-ww-9FB" secondAttribute="trailing" constant="14" id="FxI-By-2Xl"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="3ef-HW-Qp8" secondAttribute="bottom" constant="5.5" id="H8i-Tk-V9P"/>
-                                                <constraint firstItem="nhL-oj-kLw" firstAttribute="leading" secondItem="00T-DZ-p1Q" secondAttribute="leading" constant="79" id="JmS-9F-x8P"/>
-                                                <constraint firstItem="nhL-oj-kLw" firstAttribute="centerY" secondItem="5Ce-ww-9FB" secondAttribute="centerY" id="MBJ-jN-45C"/>
                                                 <constraint firstItem="3ef-HW-Qp8" firstAttribute="top" secondItem="00T-DZ-p1Q" secondAttribute="topMargin" constant="5.5" id="Q5a-xD-XZy"/>
-                                                <constraint firstItem="5Ce-ww-9FB" firstAttribute="top" secondItem="00T-DZ-p1Q" secondAttribute="topMargin" constant="-6" id="UPx-LL-jeP"/>
-                                                <constraint firstItem="5Ce-ww-9FB" firstAttribute="leading" secondItem="00T-DZ-p1Q" secondAttribute="leadingMargin" id="VTo-YK-Xx8"/>
                                                 <constraint firstItem="3ef-HW-Qp8" firstAttribute="trailing" secondItem="00T-DZ-p1Q" secondAttribute="trailingMargin" id="b7C-i1-kXi"/>
-                                                <constraint firstItem="nhL-oj-kLw" firstAttribute="top" secondItem="00T-DZ-p1Q" secondAttribute="topMargin" constant="9" id="mFx-T8-dii"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="nameBox" destination="nhL-oj-kLw" id="Eld-6O-ni3"/>
+                                            <outlet property="profileImage" destination="5Ce-ww-9FB" id="ZnP-4E-ODk"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -893,7 +889,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9fP-Ut-1rM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5055.1999999999998" y="297.78325123152712"/>
+            <point key="canvasLocation" x="5055.072463768116" y="297.32142857142856"/>
         </scene>
         <!--AjiteMember View Controller-->
         <scene sceneID="Lpu-tJ-xoI">
@@ -1444,8 +1440,8 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="334" height="58"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fcV-IS-lUg">
-                                                            <rect key="frame" x="15" y="3.5" width="50" height="51"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fcV-IS-lUg">
+                                                            <rect key="frame" x="15" y="3.5" width="50" height="50"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="50" id="9Xg-Vf-5HV"/>
                                                                 <constraint firstAttribute="width" constant="50" id="V3l-9a-V8e"/>
@@ -1823,7 +1819,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="374" height="58"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fpd-h9-rac" userLabel="friendProfielPicture">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fpd-h9-rac" userLabel="friendProfielPicture" customClass="CircleImageView" customModule="ajite" customModuleProvider="target">
                                                             <rect key="frame" x="15" y="4" width="50" height="50"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="50" id="A06-Gd-EJF"/>
@@ -2567,7 +2563,7 @@
         <segue reference="xEi-qz-IQe"/>
         <segue reference="MaB-sY-zyl"/>
         <segue reference="ZOl-UM-4IR"/>
-        <segue reference="reF-Mh-huZ"/>
+        <segue reference="sCn-aX-fjh"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="addblue" width="100" height="50"/>
