--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -970,6 +970,7 @@
                                                 <connections>
                                                     <outlet property="memberName" destination="Cop-z7-8rq" id="zWs-Fd-hQy"/>
                                                     <outlet property="memberProfile" destination="svF-uc-r5c" id="eVN-bV-fCg"/>
+                                                    <outlet property="sendFriendRequestButton" destination="zLK-As-guE" id="Hsn-3v-qOI"/>
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
